testdata/test/step/invalid-testStep.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  name: test-1
spec:
  - foo: bar
